# etl-microservice-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f3e2d1c0b9a8_initial_pipeline_runs.py
app/: config.py  database.py  exceptions.py  main.py
app/auth/: dependencies.py  jwt_utils.py  router.py  schemas.py
app/models/: __init__.py  pipeline_run.py
app/routers/: pipeline_runs.py
app/schemas/: __init__.py  pipeline_run.py
app/services/: etl_runner.py
tests/: conftest.py  test_auth.py  test_etl_runner.py  test_pipeline_runs.py
